# Analysis_Of_Debt_Sustainability

./: README.md  README_STREAMLIT.md  app_huggingface.py  requirements.txt
.streamlit/: config.toml  deploy.marker
uk_dsa_app/: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
uk_dsa_app/assets/: styles.css
uk_dsa_app/dsa/: config.py  io.py  legal.py  metrics.py  obr.py  plotting.py  report.py  timeseries.py  validation.py
uk_dsa_app/dsa/engine/: calibration.py  dsa_math.py  mc.py  scenarios.py
uk_dsa_app/pages/: 01_Data_Ingestion.py  02_Data_QA.py  03_Model_Setup.py  04_Baseline_Projections.py  05_Stress_Tests.py  06_Monte_Carlo.py  07_OBR_Comparison.py  08_Report_and_Export.py  09_Legal_Attributions.py  10_About_and_Credits.py
uk_dsa_app/sample_data/: example_maturity_profile.csv  example_metrics_template.csv  example_obr_mapping.csv
uk_dsa_app/static_site/: index.html  robots.txt  sitemap.xml
uk_dsa_app/tests/: test_dsa_math.py  test_timeseries.py
