[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "uk_dsa_app"
version = "0.1.0"
description = "UK Debt Sustainability Analysis (DSA) App"
authors = [{ name="Imperial College Business School UROP Team", email="example@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = [
    "tests",
]